Fixed scaling on small devices

--- a/css/style.css
+++ b/css/style.css
@@ -165,7 +165,7 @@ img {
 @media only screen and (max-width: 320px) {
 
     #logo {
-        margin-top: 125px;
+        margin-top: 75px;
         font-size: 145px;
     }
 
